# FL_practicum1

./: CMakeLists.txt  README.md  main.cpp
RegularResolant/: CMakeLists.txt  RegularResolant.cpp  RegularResolant.h
Solver/: CMakeLists.txt  solver.cpp  solver.h
WrongNotationException/: CMakeLists.txt  WrongNotationException.cpp  WrongNotationException.h
testing/: CMakeLists.txt
testing/tests/: CMakeLists.txt  main.cpp
